codegen/ui_tests/rhai_fn_non_clonable_return.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> ui_tests/rhai_fn_non_clonable_return.rs:12:31
   |
11 |   #[export_fn]
   |   ------------
   |   |
   |  _in this attribute macro expansion
   | |
12 | | pub fn test_fn(input: f32) -> NonClonable {
   | |                               ^^^^^^^^^^-
   | |_______________________________|_________|
   |                                 |         required by a bound introduced by this call
   |                                 the trait `Clone` is not implemented for `NonClonable`
   |
note: required by a bound in `Dynamic::from`
  --> $WORKSPACE/src/types/dynamic.rs
   |
   |     pub fn from<T: Variant + Clone>(value: T) -> Self {
   |                              ^^^^^ required by this bound in `Dynamic::from`
   = note: this error originates in the attribute macro `export_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NonClonable` with `#[derive(Clone)]`
   |
 4 + #[derive(Clone)]
 5 | struct NonClonable {
   |
